--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <base href="/" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="google-site-verification"
-      content="49vBJXaWq-CmfoGv4OPha_PHjMLktUPOnjKrc_0xxjI"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com/css?family=Raleway|Volkhov"
-      crossorigin
-    />
 
-    <link rel="preconnect" href="https://txiverke.cat" />
-    <link rel="preconnect" href="https://res.cloudinary.com" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="google-site-verification" content="49vBJXaWq-CmfoGv4OPha_PHjMLktUPOnjKrc_0xxjI" />
+  <link rel="stylesheet" href="https://use.typekit.net/ssk0svz.css">
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main class="root"></main>
-  </body>
+  <link rel="preconnect" href="https://txiverke.cat" />
+  <link rel="preconnect" href="https://res.cloudinary.com" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <main class="root"></main>
+</body>
+
 </html>
