--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="google-site-verification" content="49vBJXaWq-CmfoGv4OPha_PHjMLktUPOnjKrc_0xxjI" />
+
   <link rel="stylesheet" href="https://use.typekit.net/ssk0svz.css">
 
   <link rel="preconnect" href="https://txiverke.cat" />
