--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main class="root"></main>
+    <script src='https://meet.jit.si/external_api.js'></script>
   </body>
 </html>
