--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,17 @@
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="google-site-verification" content="49vBJXaWq-CmfoGv4OPha_PHjMLktUPOnjKrc_0xxjI" />
-
-<<<<<<< HEAD
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main class="root"></main>
-    <script src='https://meet.jit.si/external_api.js'></script>
-  </body>
-</html>
-=======
-  <link rel="stylesheet" href="https://use.typekit.net/ssk0svz.css">
-
-  <link rel="preconnect" href="https://txiverke.cat" />
   <link rel="preconnect" href="https://res.cloudinary.com" />
+  <meta name="theme-color" content="#006c80" />
+  <link rel="manifest" href="/manifest.f9bfbd308786d491ebe15a132b8e9ea3.json" crossorigin="use-credentials" />
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link href="/main.css" rel="stylesheet">
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <main class="root"></main>
+  <script src='https://meet.jit.si/external_api.js'></script>
 </body>
 
 </html>
->>>>>>> development
